modules/tests/_kubernetes-policy/fixtures/edge-identity/normal-membership-state-join/resources.yaml
apiVersion: v1
data:
  members.json: '["daniel"]'
  state.json: '{"persons":{"unauthorized":{}}}'
kind: ConfigMap
metadata:
  name: kanidm-provision
  namespace: identity
